# bread-units

./: .gitignore  README.md  bread-units.sublime-project  release.nix  shell.nix
bread-units-api/: bread-units-api.cabal  stack.yaml
bread-units-api/src/Bread/: API.hs
bread-units-backend/: .gitignore  bread-units-backend.cabal  stack.yaml
bread-units-backend/src/: Main.hs
bread-units-backend/static/: all_step00.js  all_step01.js  all_step02.js  index.html  mmo.html  step00.html  step01.html  step02.html  step03.html  step04.html  step05.html  style.css
bread-units-frontend/: bread-units-frontend.cabal  build.sh  overrides.nix  stack.yaml  stack.yaml.tmpl
bread-units-frontend/src/: Client.hs  Helpers.hs  Main.hs
nixdeps/: servant-reflex.nix  servant.nix
reveal.js/: index.html
reveal.js/css/: style.css
reveal.js/css/theme/: white.css
reveal.js/img/: component_component.xcf
