name:                bread-units-api
version:             0.1.0.0
synopsis:            API for reflex-dom demo application
description:         Please see README.md
homepage:            https://github.com/ncrashed/bread-units#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bread.API
  build-depends:
      base    >= 4.7 && < 5
    , servant >= 0.11 && < 0.12
    , text    >= 1.2 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ncrashed/bread-units
