name:                bread-units-backend
version:             0.1.0.0
synopsis:            Backend server for demo reflex-dom application
description:         Please see README.md
homepage:            https://github.com/NCrashed/bread-units#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bread-units-backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base              >= 4.7 && < 5
    , bread-units-api
    , servant           >= 0.11 && < 0.12
    , servant-server    >= 0.11 && < 0.12
    , text              >= 1.2  && < 1.3
    , wai               >= 3.2  && < 3.3
    , warp              >= 3.2  && < 3.3

source-repository head
  type:     git
  location: https://github.com/ncrashed/bread-units
