name:                bread-units-frontend
version:             0.1.0.0
synopsis:            Frontend for reflex-dom demo application
description:         Please see README.md
homepage:            https://github.com/githubuser/bread-units#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bread-units-frontend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5

source-repository head
  type:     git
  location: https://github.com/ncrashed/bread-units