name:                bread-units-frontend
version:             0.1.0.0
synopsis:            Frontend for reflex-dom demo application
description:         Please see README.md
homepage:            https://github.com/githubuser/bread-units#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bread-units-frontend
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Client
    Helpers
  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7   && < 5
    , bread-units-api
    , containers            >= 0.5.7 && < 0.6
    , either                >= 4.4   && < 4.5
    , lens                  >= 4.14  && < 4.15
    , reflex-dom            >= 0.4   && < 0.5
    , servant               >= 0.9   && < 0.10
    , servant-reflex        >= 0.2   && < 0.3
    , text                  >= 1.2   && < 1.3
  default-extensions:
    BangPatterns
    FlexibleContexts
    GADTs
    OverloadedLists
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/ncrashed/bread-units